--- a/mscore/musescore.qrc
+++ b/mscore/musescore.qrc
@@ -20,6 +20,7 @@
         <file alias="fonts/mscoreTab.ttf">../fonts/mscoreTab.ttf</file>
         <file alias="fonts/fonts_figuredbass.xml">../fonts/fonts_figuredbass.xml</file>
         <file alias="fonts/mscore-BC.ttf">../fonts/mscore-BC.ttf</file>
+        <file alias="fonts/Bravura.otf">../fonts/bravura/Bravura.otf</file>
         <file alias="data/instruments.xml">../share/templates/instruments.xml</file>
         <file>data/splash.jpg</file>
         <file alias="data/Promenade_Example.mscz">../demos/promenade.mscz</file>
