--- a/mscore/editstyle.ui
+++ b/mscore/editstyle.ui
@@ -167,7 +167,7 @@
    <item row="0" column="1">
     <widget class="QStackedWidget" name="pageStack">
      <property name="currentIndex">
-      <number>12</number>
+      <number>9</number>
      </property>
      <widget class="QWidget" name="Seite1">
       <layout class="QVBoxLayout" name="verticalLayout_20">
@@ -2911,7 +2911,7 @@ p, li { white-space: pre-wrap; }
             </property>
            </widget>
           </item>
-          <item row="3" column="0">
+          <item row="4" column="0">
            <spacer name="verticalSpacer_7">
             <property name="orientation">
              <enum>Qt::Vertical</enum>
@@ -2936,6 +2936,13 @@ p, li { white-space: pre-wrap; }
              </size>
             </property>
            </spacer>
+          </item>
+          <item row="3" column="0">
+           <widget class="QCheckBox" name="beamNoSlope">
+            <property name="text">
+             <string>horizontal</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
